[gd_scene load_steps=7 format=3 uid="uid://oq0kbhbyj4g7"]

[ext_resource type="Texture2D" uid="uid://0gw618at84gp" path="res://Assets/Objects_separately/Rock_statue_old_man_grass_shadow.png" id="1_j48l4"]
[ext_resource type="Script" path="res://interations/statue_old_man.gd" id="1_r1ojt"]
[ext_resource type="PackedScene" uid="uid://s7r0esrireo2" path="res://interations/interation_area/interaction_area.tscn" id="2_k6o8j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0cr0r"]
radius = 13.0
height = 60.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hplvy"]
size = Vector2(45, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_n0mg2"]
radius = 43.0116

[node name="statue_old_man" type="Area2D"]
y_sort_enabled = true
script = ExtResource("1_r1ojt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_j48l4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("CapsuleShape2D_0cr0r")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 26)
shape = SubResource("RectangleShape2D_hplvy")

[node name="InteractionArea" parent="." instance=ExtResource("2_k6o8j")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(1, 36)
shape = SubResource("CircleShape2D_n0mg2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
